Update FIP-0097 with implementation details and security considerations

--- a/FIPS/fip-0097.md
+++ b/FIPS/fip-0097.md
@@ -27,26 +27,67 @@ While the FEVM implementation utilizes permanent storage for practical reasons, 
 ### Opcode Descriptions
 
 #### `TLOAD`
-- **Opcode Hex:** `0x5C`  
-- **Stack Input:**  
-  - `key`: Location of the transient storage value to load  
-- **Stack Output:**  
-  - `value`: Stored value or zero if no value exists  
-- **Description:** Retrieves the value associated with `key` in the transient storage for the current transaction.
+- **Opcode Hex:** `0x5C`
+- **Stack Input:**
+  - `key`: Location of the transient storage value to load
+- **Stack Output:**
+  - `value`: Stored value or zero if no value exists
+- **Description:**
+  - Retrieves the value associated with `key` in transient storage.
+  - If the transaction has ended, transient storage is cleared, and `TLOAD` returns zero.
 
 #### `TSTORE`
-- **Opcode Hex:** `0x5D`  
-- **Stack Input:**  
-  - `key`: Location to store the value  
-  - `value`: Value to store  
-- **Output:** None  
-- **Description:** Stores `value` at the specified `key` in the transient storage for the current transaction.
+- **Opcode Hex:** `0x5D`
+- **Stack Input:**
+  - `key`: Location to store the value
+  - `value`: Value to store
+- **Output:** None
+- **Description:**
+  - Stores `value` at the specified `key` in transient storage.
+  - Data is cleared at the end of the transaction.
+
 
 ### Lifecycle Management
-Transient storage is valid only within the context of a single transaction. A lifecycle mechanism tracks transaction metadata (`origin` and `nonce`) to enforce lifecycle validation. 
+Transient storage is valid only within a single transaction. The system enforces this behavior by:
+
+- **Tracking `origin` and `nonce`**: Each transient storage slot is associated with the transaction’s origin actor and nonce.
+- **Resetting Storage on New Transactions**: If a new transaction begins, previous transient storage data is discarded.
+- **Allowing Reentrancy**: If a contract calls itself within a transaction, it retains access to the same transient storage.
+
+At the implementation level, transient storage is managed via `StateKamt<U256, U256>`, ensuring transaction-scoped isolation.
 
 ### Implementation Details
-The FEVM implements transient storage using a lifecycle validation mechanism to ensure data remains accessible only during the originating transaction. This validation enforces the same behavior as Ethereum’s transient storage. Internally, transient storage relies on permanent storage to manage lifecycle data and state while ensuring functional adherence to Ethereum’s behavior.
+The FEVM implements transient storage (`TLOAD` and `TSTORE`) using an internal lifecycle validation mechanism. This ensures that transient storage remains scoped to the transaction and is automatically cleared once execution ends.
+
+##### Data Structures
+The implementation introduces the following Rust data structures:
+
+- **`TransientData`**: Stores the transient storage state for a contract within a transaction.
+- **`TransientDataLifespan`**: Tracks the lifespan of transient storage using the `origin` actor ID and `nonce` of the transaction.
+
+```rust
+pub struct TransientData {
+    pub transient_data_state: Cid,  // CID of the transient storage map
+    pub transient_data_lifespan: TransientDataLifespan, // Lifecycle validation
+}
+
+pub struct TransientDataLifespan {
+    pub origin: ActorID,  // Origin actor ID
+    pub nonce: u64,  // Unique transaction identifier
+}
+```
+
+##### Storage and Lifecycle Enforcement
+The FEVM utilizes **persistent storage** to back transient data but enforces strict lifecycle rules to ensure it behaves like Ethereum's transient storage. The system:
+
+1. **Checks Transaction Context**:
+   - Before every `TLOAD` or `TSTORE` operation, the contract verifies the transaction’s `origin` and `nonce` to ensure validity.
+
+2. **Clears Storage at Transaction End**:
+   - If a new transaction begins, the system resets the `TransientData` state, ensuring no data persists across transactions.
+
+3. **Handles Reentrant Calls**:
+   - If a contract invokes itself within the same transaction, transient storage remains available.
 
 ---
 
@@ -63,25 +104,43 @@ At the time of writing, support for `TLOAD` and `TSTORE` in current versions of 
 
 ## Test Cases
 
-### Essential Tests
-1. **Basic Functionality:**
-   - Verify `TLOAD` retrieves the correct value.
-   - Verify `TSTORE` writes data to the transient storage correctly.
-   - Verify `TLOAD` from an unitialized location returns the zero value.
+##### **1. Basic Functionality**
+- Verify `TLOAD` retrieves the correct value.
+- Verify `TSTORE` writes data to transient storage.
+- Verify `TLOAD` from an uninitialized location returns zero.
 
-2. **Lifecycle Validation:**
-   - Verify that transient storage is automatically cleared and becomes inaccessible after the transaction ends.
-   - Verify that transient storage is properly cleared at the end of each transaction and any out-of-lifecycle data does not interfere with subsequent transaction operations.
-   - Verify that nested contracts have independent transient storage spaces can read and write independently.
-   - Verify that memory remains accessible and stable after contract reentry.
+##### **2. Lifecycle Validation**
+- Verify transient storage is **cleared** at the end of a transaction.
+- Verify **reentrant calls** access the same transient storage space.
+- Verify **nested contract calls** have independent transient storage.
+
+##### **3. Cross-Contract Isolation**
+- Deploy two contracts, `A` and `B`.
+- Have contract `A` write to transient storage.
+- Have contract `B` attempt to access `A`'s transient storage.
+- Verify that `B` cannot read `A`'s transient storage.
+
+##### **4. Handling Reverted Transactions**
+- Store a value in transient storage.
+- Revert the transaction before it completes.
+- Verify that no transient storage data persists.
+
 
 ---
 
 ## Security Considerations
-Transient storage introduces minimal additional risk compared to existing state storage. Lifecycle validation ensures storage is inaccessible outside the originating transaction. Security measures include:
-- Preventing out-of-bounds memory access.
-- Ensuring transient storage clears properly after a transaction ends.
-- Ensuring nested contracts do not have access to each other's memory spaces.
+Transient storage introduces security considerations, primarily around ensuring that data does not persist beyond the transaction. To mitigate risks:
+
+1. **Automatic Clearing at Transaction End**
+   - Transient storage is reset when a new transaction starts.
+   - Even if the contract does not explicitly clear storage, the FEVM enforces reset.
+
+2. **Preventing Cross-Contract Leakage**
+   - Contracts cannot access transient storage from other contracts.
+   - Each contract’s transient storage is isolated by its execution context.
+
+3. **Reentrancy Safety**
+   - Contracts can safely store temporary data within a transaction.
 
 ---
 
